# td-route-trees

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  pyproject.toml
cpp/bindings/: module.cpp
cpp/core/: instance.h  route_eval.cpp
cpp/pwlf/: FROZEN.md  pwlf.cpp  pwlf.h
cpp/structures/: baseline.cpp  baseline.h  bbt.cpp  bbt.h  bench.cpp  bench.h  lca_bst.cpp  lca_bst.h  norm.cpp  norm.h  splice.h
nix-dev/: flake.nix
src/td_route_trees/: __init__.py  io.py
src/td_route_trees/experiments/: bench_moves.py  bks_reprice_norm.py  fold_order.py  norm_study.py  update_scan.py
tests/: conftest.py  test_baseline_checker.py  test_bbt.py  test_import.py  test_lca.py  test_norm.py
